--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="label_votes">%s votes</string>
     <string name="action_bookmark">Add to bookmarks</string>
     <string name="action_remove_from_bookmarks">Delete from bookmarks</string>
-    <string name="user_added_successfully">User added to your bookmarks successfully</string>
-    <string name="user_removed_successfully">User removed from your bookmarks successfully</string>
+    <string name="user_added_successfully">User was added to your bookmarks successfully</string>
+    <string name="user_removed_successfully">User was removed from your bookmarks successfully</string>
     <string name="unknown_error">Unknown Error</string>
     <string name="play_icon">Play icon</string>
     <string name="language">Language</string>
